Fix GitHub link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <a
       class="github"
-      href="https://github.com/MERNCraft/07_animation-timing"
+      href="https://github.com/MERNCraft/timing"
     >
       <img src="github.svg" alt="github">
     </a>
